--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "velocity-react": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
