--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
+    "react-simple-maps": "^0.12.1",
     "velocity-react": "^1.4.1"
   },
   "scripts": {
